Fix layout issues and page title

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,32 +2,18 @@
   padding: 48px 0;
 } */
 
-section#footer {
-  padding: 24px 0;
-}
-
 h1 {
   font-weight: 300;
 }
 
-p {
-  font-size: 16px;
+h2 {
+  font-size: 3rem;
 }
 
-.stat p {
-  text-transform: uppercase;
+p {
+  font-size: 1rem;
 }
-.stats {
-  display: flex;
-  flex-wrap: wrap;
-}
-.stat {
-  border: 1px solid grey;
-  border-left: 1px solid grey;
-  width: calc(100% * (1/2));
-  padding: 32px;
-  text-align: center;
-}
+
 .counter {
   font-size: 32px;
 }
@@ -41,10 +27,7 @@ p {
 
 #hero .container {
   height: 100vh;
-}
-
-#features .material-icons {
-  font-size: 50px;
+  width: 100vw;
 }
 
 .flex-dir-col {
@@ -57,10 +40,6 @@ p {
 }
 .jc-space-between {
   justify-content: space-between;
-}
-
-.m-r-16 {
-  margin-right: 16px;
 }
 
 .btn, .btn-large{
@@ -77,6 +56,4 @@ p {
 
 .particles-bg-canvas-self{
   background: #000;
-  height: 100vh;
-  width: 100wh;
 }
